src/test/resources/purescript_examples/passing/2288.purs.psi
Purescript File
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(Qualified)
        PSASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Qualified)
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Prelude')
        PsiElement(whitespace)('\n')
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Qualified)
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Control')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Monad')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Eff')
        PsiElement(whitespace)('\n')
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Qualified)
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Control')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Monad')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Eff')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Console')
        PsiElement(whitespace)('\n')
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Qualified)
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Data')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Array')
        PsiElement(whitespace)('\n')
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Qualified)
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Data')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Array')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Partial')
        PsiElement(whitespace)(' ')
  PsiErrorElement:Unexpected as. Expecting Module
    PsiElement(as)('as')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('P')
    PsiElement(whitespace)('\n')
    PsiElement(import)('import')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('Partial')
    PsiElement(.)('.')
    PsiElement(proper name)('Unsafe')
    PsiElement(whitespace)('\n\n')
    PsiElement(identifier)('length')
    PsiElement(whitespace)(' ')
    PsiElement(::)('::')
    PsiElement(whitespace)(' ')
    PsiElement(forall)('forall')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('a')
    PsiElement(.)('.')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('Array')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('a')
    PsiElement(whitespace)(' ')
    PsiElement(->)('->')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('Int')
    PsiElement(whitespace)('\n')
    PsiElement(identifier)('length')
    PsiElement(whitespace)(' ')
    PsiElement(=)('=')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('go')
    PsiElement(whitespace)(' ')
    PsiElement(natural)('0')
    PsiElement(whitespace)(' ')
    PsiElement(where)('where')
    PsiElement(whitespace)('\n  ')
    PsiElement(identifier)('go')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('acc')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('arr')
    PsiElement(whitespace)(' ')
    PsiElement(=)('=')
    PsiElement(whitespace)('\n    ')
    PsiElement(if)('if')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('null')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('arr')
    PsiElement(whitespace)('\n    ')
    PsiElement(then)('then')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('acc')
    PsiElement(whitespace)('\n    ')
    PsiElement(else)('else')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('go')
    PsiElement(whitespace)(' ')
    PsiElement(()('(')
    PsiElement(identifier)('acc')
    PsiElement(whitespace)(' ')
    PsiElement(operator)('+')
    PsiElement(whitespace)(' ')
    PsiElement(natural)('1')
    PsiElement())(')')
    PsiElement(whitespace)(' ')
    PsiElement(()('(')
    PsiElement(identifier)('unsafePartial')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('P')
    PsiElement(.)('.')
    PsiElement(identifier)('tail')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('arr')
    PsiElement())(')')
    PsiElement(whitespace)('\n\n')
    PsiElement(identifier)('main')
    PsiElement(whitespace)(' ')
    PsiElement(=)('=')
    PsiElement(whitespace)(' ')
    PsiElement(do)('do')
    PsiElement(whitespace)('\n  ')
    PsiElement(identifier)('logShow')
    PsiElement(whitespace)(' ')
    PsiElement(()('(')
    PsiElement(identifier)('length')
    PsiElement(whitespace)(' ')
    PsiElement(()('(')
    PsiElement(natural)('1')
    PsiElement(whitespace)(' ')
    PsiElement(..)('..')
    PsiElement(whitespace)(' ')
    PsiElement(natural)('10000')
    PsiElement())(')')
    PsiElement())(')')
    PsiElement(whitespace)('\n  ')
    PsiElement(identifier)('log')
    PsiElement(whitespace)(' ')
    PsiElement(string)('"Done"')
    PsiElement(whitespace)('\n')
